--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Typescrpit ExpressJs api to handle Authentication linked to DynamoDb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/LorneCurrie/typescript-api-auth/issues"
   },
-  "homepage": "https://github.com/LorneCurrie/typescript-api-auth#readme"
+  "homepage": "https://github.com/LorneCurrie/typescript-api-auth#readme",
+  "dependencies": {
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4",
+    "typescript": "^3.1.3"
+  }
 }
