Added TS build directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,10 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+# Typescript compile folder
+build/
+
+
 
 # Dependency directories
 node_modules/
