--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-api-auth",
   "version": "1.0.0",
-  "description": "A Typescrpit ExpressJs api to handle Authentication linked to DynamoDb",
+  "description": "A TypeScript ExpressJs api to handle Authentication linked to DynamoDb",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,7 +31,9 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-boom": "^2.0.0",
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
@@ -53,7 +55,7 @@
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.0",
     "@types/sequelize": "^4.27.28",
-    "errorhandler": "^1.5.0",
+    "@types/uuid": "^3.4.4",
     "sequelize-cli": "^5.2.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
